fixed overflow

--- a/assets/scss/alex/navigation.scss
+++ b/assets/scss/alex/navigation.scss
@@ -54,5 +54,5 @@
     }
 }
 html {
-    overflow: hidden;
+    overflow-x: hidden;
 }
